==> doyeouUCT/msc_stm32f4/log_test/src/fatfs/diskio.c <==
#include "diskio.h"
#define STM32_SD_DISK_IOCTRL_FORCE      0
#define BOOL char
#define TRUE 1
#define FALSE 0
#define USE_EK_STM32F
#define RCC_APB2Periph_GPIO_PWR  RCC_APB2Periph_GPIOD
#define GPIO_PWR                 GPIOD
#define GPIO_Pin_PWR             GPIO_Pin_10
#define GPIO_Mode_PWR            GPIO_Mode_Out_OD
#define CARD_SUPPLY_SWITCHABLE   0
#define SOCKET_WP_CONNECTED      0
#define SOCKET_CP_CONNECTED      0
#define RCC_AHBPeriphClockCmd_SPI_CS	RCC_AHB1PeriphClockCmd
#define RCC_AHBPeriph_GPIO_CS   		RCC_AHB1Periph_GPIOB
#define GPIO_CS                 		GPIOB
#define GPIO_Pin_CS              		GPIO_Pin_12
#define RCC_APBPeriphClockCmd_SPI_SD	RCC_APB1PeriphClockCmd
#define RCC_APBPeriph_SPI_SD			RCC_APB1Periph_SPI2
#define SPI_SD                   		SPI2
#define GPIO_SPI_SD              		GPIOB
#define GPIO_Pin_SPI_SD_SCK      		GPIO_Pin_13
#define GPIO_Pin_SPI_SD_MISO     		GPIO_Pin_14
#define GPIO_Pin_SPI_SD_MOSI     		GPIO_Pin_15
#define GPIO_Pin_SPI_SD_SCK_Src			GPIO_PinSource13
#define GPIO_Pin_SPI_SD_MISO_Src		GPIO_PinSource14
#define GPIO_Pin_SPI_SD_MOSI_Src		GPIO_PinSource15
#define GPIO_AF_SPI_SD					GPIO_AF_SPI2
#define SPI_BaudRatePrescaler_SPI_SD  SPI_BaudRatePrescaler_8
#define RCC_AHBPeriph_DMA		RCC_AHB1Periph_DMA1
#define DMA_Channel_SPI_SD_RX	DMA_Channel_0
#define DMA_Channel_SPI_SD_TX	DMA_Channel_0
#define DMA_Stream_SPI_SD_RX	DMA1_Stream3
#define DMA_Stream_SPI_SD_TX	DMA1_Stream4
#define DMA_FLAG_SPI_SD_TC_RX	DMA_FLAG_TCIF3

static
BYTE stm32_spi_rw( BYTE out )
{
	/* Loop while DR register in not empty */
	/// not needed: while (SPI_I2S_GetFlagStatus(SPI_SD, SPI_I2S_FLAG_TXE) == RESET) { ; }

	/* Send byte through the SPI peripheral */
	SPI_I2S_SendData(SPI_SD, out);

	/* Wait to receive a byte */
	while (SPI_I2S_GetFlagStatus(SPI_SD, SPI_I2S_FLAG_RXNE) == RESET) { ; }

	/* Return the byte read from the SPI bus */
	return SPI_I2S_ReceiveData(SPI_SD);
}

static
void power_off(void) {
	GPIO_InitTypeDef GPIO_InitStructure;

	if (!(Stat & STA_NOINIT)) {
		SELECT();
		wait_ready();
		release_spi();
	}

	SPI_I2S_DeInit(SPI_SD );
	SPI_Cmd(SPI_SD, DISABLE);
	RCC_APBPeriphClockCmd_SPI_SD(RCC_APBPeriph_SPI_SD, DISABLE);

	/* All SPI-Pins to input with weak internal pull-downs */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_SPI_SD_SCK | GPIO_Pin_SPI_SD_MISO | GPIO_Pin_SPI_SD_MOSI;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
	GPIO_Init(GPIO_SPI_SD, &GPIO_InitStructure);

	card_power(0);

	Stat |= STA_NOINIT; /* Set STA_NOINIT */
}
